<resources>
    <string name="app_name">Travel</string>
    <string name="hint_email">Email</string>
    <string name="hint_name">Name</string>
    <string name="hint_pass">Password</string>
    <string name="text_login">Login</string>
    <string name="text_login1"><u>Login</u></string>
    <string name="text_login_Facebook">Đăng nhập bằng Facebook</string>
    <string name="text_sign_up"><u>Sign-Up</u></string>
    <string name="text_signup">Sign Up</string>
    <string name="text_not_account"> Do not have an account? </string>
    <string name="title_activity_login">Sign in</string>
    <string name="text_place">Địa điểm</string>
    <string name="text_eat">Ăn uống</string>
    <string name="text_rest">Nghỉ ngơi</string>
    <string name="text_shopping">Mua sắm</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
