<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.example.nam.travel.views.login.LoginActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"

        >
        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/edt_margin_left"
            android:layout_marginRight="@dimen/edt_margin_right"
            android:layout_marginTop="@dimen/edt_margin_top"
            android:layout_marginBottom="@dimen/edt_margin_bottom"
            android:padding="@dimen/text_padding"
            android:textColor="@color/black"
            android:hint="@string/hint_email"
            android:textSize="@dimen/text_size_large"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textInputLayoutEmail"
        >
        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/edt_margin_left"
            android:layout_marginRight="@dimen/edt_margin_right"
            android:layout_marginTop="@dimen/edt_margin_top"
            android:layout_marginBottom="@dimen/edt_margin_bottom"
            android:padding="@dimen/text_padding"
            android:textColor="@color/black"
            android:hint="@string/hint_pass"
            android:textSize="@dimen/text_size_large"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textInputLayoutPassword"
        android:layout_marginLeft="@dimen/edt_margin_left"
        android:layout_marginRight="@dimen/edt_margin_right"
        android:layout_marginTop="@dimen/edt_margin_top"
        android:background="@drawable/shape_button_login"
        android:text="@string/text_login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_large"
        />


    <TextView
        android:id="@+id/txt_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:gravity="center"
        android:hint="@string/text_not_account"
        android:padding="@dimen/text_padding"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_small" />

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txt_sign_up"

        android:layout_alignBottom="@+id/txt_sign_up"
        android:layout_alignEnd="@+id/btn_login"
        android:layout_alignRight="@+id/btn_login"
        android:background="@android:color/transparent"

        android:text="@string/text_sign_up"
        android:textAllCaps="false"
        android:textColor="@color/blue"
        android:textSize="@dimen/text_size_small" />
    

</RelativeLayout>
