<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="11"
    tools:context="com.example.nam.travel.views.fragment.HomeFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_weight="4"

        >

        <ImageView
            android:id="@+id/toppicture"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:src="@drawable/ic_toppicture" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="7"
        android:weightSum="10"
        android:orientation="vertical"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:weightSum="2"
            android:orientation="vertical"
           >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="2">
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    >

                    <Button
                        android:id="@+id/btn_place"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="20dp"
                        android:background="@color/white"
                        android:text="@string/text_place"
                        android:drawableLeft="@drawable/ic_camera_alt_black_24dp"

                        />
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    >
                    <Button
                        android:id="@+id/btn_eat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="20dp"
                        android:background="@color/white"
                        android:text="@string/text_eat"
                        android:drawableLeft="@drawable/ic_local_dining_black_24dp"
                        />
                </android.support.v7.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="2">
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    >

                    <Button
                        android:id="@+id/btn_rest"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="20dp"
                        android:background="@color/white"
                        android:text="@string/text_rest"
                        android:drawableLeft="@drawable/ic_local_hotel_black_24dp"
                        />
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    >
                    <Button
                        android:id="@+id/btn_shopping"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="20dp"
                        android:background="@color/white"
                        android:text="@string/text_shopping"
                        android:drawableLeft="@drawable/ic_shopping_basket_black_24dp"
                        />
                </android.support.v7.widget.CardView>

            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <android.support.v7.widget.RecyclerView
                android:id="@+id/my_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none"/>

        </LinearLayout>




    </LinearLayout>


</LinearLayout>
